--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
-/*@import url(http://fonts.googleapis.com/css?family=Open+Sans);*/
+@charset "utf-8";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
 * {
   -webkit-box-sizing: border-box;
