--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,13 @@
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
+@font-face {
+  font-family : "'Open Sans'";
+  font-style : normal;
+  font-weight : 400;
+  src : local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3aCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
+}
 
 * {
   -webkit-box-sizing: border-box;
@@ -10,7 +18,6 @@
 html, body {
   background-color: #e7e4d5;
   font-family: "Helvetica Neue", "Open Sans", "Segoe UI", "Arial", sans-serif;
-
   width: 100%;
   height: 100%;
   margin: 0;
@@ -18,41 +25,27 @@ html, body {
   border: 0;
 }
 
-::selection {
+::-moz-selection {
   background-color: #703e3b;
   color: #e7e4d5;
   text-shadow: none;
 }
 
-  ::-moz-selection {
-    background-color: #703e3b;
-    color: #e7e4d5;
-    text-shadow: none;
-  }
-
 ::-webkit-scrollbar {
   width: 10px;
 }
 
-  ::-webkit-scrollbar-track {
-    background: #777465;
-  }
+::-webkit-scrollbar-track {
+  background: #777465;
+}
 
-    ::-webkit-scrollbar-track:hover {
-      background: #979485;
-    }
+::-webkit-scrollbar-thumb {
+  background-color: #7a0000;
+}
 
-  ::-webkit-scrollbar-thumb {
-    background-color: #7a0000;
-  }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background-color: #9a1314;
-    }
-
-  ::-webkit-scrollbar-corner {
-    background: transparent;
-  }
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 
 a {
   color: #703e3b;
@@ -64,63 +57,50 @@ a {
   display: none;
 }
 
-  @media all and (min-width: 800px) {
-    .site-nav {
-      background-color: #b13a3b;
-      display: block;
-
-      width: 100%;
-      top: 0;
-      position: relative;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      -o-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-      .nav-ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        height: 50px;
-        width: auto;
-      }
-
-        .nav-item {
-          color: #e7e4d5;
-          text-decoration: none;
-          font-weight: normal;
-          line-height: 50px;
-
-          padding: 14px 50px;
-          height: 50px;
-          margin: 0;
-
-          -webkit-transition: background-color .25s ease;
-             -moz-transition: background-color .25s ease;
-              -ms-transition: background-color .25s ease;
-               -o-transition: background-color .25s ease;
-                  transition: background-color .25s ease;
-        }
-
-        .nav-item:hover, .nav-item:focus {
-          background-color: #9a1314;
-          outline: none;
-        }
-
-        .nav-item {
-          display: inline;
-          height: 50px;
-          margin: 0;
-        }
+@media all and (min-width:800px) {
+  .site-nav {
+    background-color: #b13a3b;
+    display: block;
+    width: 100%;
+    top: 0;
+    position: relative;
   }
+
+  .nav-ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    height: 50px;
+    width: auto;
+  }
+
+  .nav-item {
+    color: #e7e4d5;
+    text-decoration: none;
+    font-weight: normal;
+    line-height: 50px;
+    padding: 14px 50px;
+    height: 50px;
+    margin: 0;
+    transition: background-color 0.25s ease;
+  }
+
+  .nav-item:hover, .nav-item:focus {
+    background-color: #9a1314;
+    outline: none;
+  }
+
+  .nav-item {
+    display: inline;
+    height: 50px;
+    margin: 0;
+  }
+}
 
 .main-header {
   background-color: #c84648;
   color: #e7e4d5;
   text-align: center;
-
   position: relative;
   top: 0;
   left: 0;
@@ -130,57 +110,47 @@ a {
   height: auto;
 }
 
-  .main-header *::selection {
-    background-color: white;
-    color: #c84648;
-  }
+.main-header *::-moz-selection {
+  background-color: white;
+  color: #c84648;
+}
 
-  .main-header *::-moz-selection {
-    background-color: white;
-    color: #c84648;
-  }
+.site-logo {
+  border: #703e38 solid 5px;
+  background-color: #e7e4d5;
+  color: #c84648;
+  border-radius: 100px;
+  width: 200px;
+  height: 200px;
+  line-height: 200px;
+  font: 3em "Learning Curve Pro";
+  text-transform: uppercase;
+  overflow-wrap: break-word;
+  margin: 0.45em auto;
+  padding: 0;
+}
 
+@media all and (min-width:240px) {
   .site-logo {
-    border: 5px solid #703e38;
-    background-color: #e7e4d5;
-    color: #c84648;
-
-    border-radius: 100px;
-    width: 200px;
-    height: 200px;
-    line-height: 200px;
-
-    font: 3em "Learning Curve Pro";
-    text-transform: uppercase;
-    word-wrap: break-word;
-
-    margin: 0.45em auto;
-    padding: 0;
+    font-size: 3.5em;
   }
+}
 
-    @media all and (min-width: 240px) {
-      .site-logo {
-        font-size: 3.5em;
-      }
-    }
+@media all and (min-width:350px) {
+  .site-logo {
+    font-size: 4em;
+  }
+}
 
-    @media all and (min-width: 350px) {
-      .site-logo {
-        font-size: 4em;
-      }
-    }
+@media all and (min-width:500px) {
+  .site-logo {
+    font-size: 5em;
+  }
+}
 
-    @media all and (min-width: 500px) {
-      .site-logo {
-        font-size: 5em;
-      }
-    }
-
-    /* IE Legacy support */
-
-    .lt-ie9 .site-logo {
-      font-size: 6em;
-    }
+.lt-ie9 .site-logo {
+  font-size: 6em;
+}
 
 .features {
   min-width: 100%;
@@ -190,8 +160,7 @@ a {
 
 .feature {
   background-color: #d3c8b4;
-  border: 5px solid #703e3b;
-
+  border: #703e3b solid 5px;
   width: 100%;
   height: 100%;
   display: block;
@@ -200,68 +169,65 @@ a {
   margin: 1em auto;
 }
 
-  .feature h2 {
-    margin: 0;
-  }
+.feature h2 {
+  margin: 0;
+}
 
-  @media all and (min-width: 480px) {
-    .feature {
-      display: inline;
-      width: 48%;
-      float: left;
-      margin: 1%;
-    }
-  }
-
-  @media all and (min-width: 800px) {
-    .feature {
-      width: 24%;
-      margin: 0;
-      margin-left: 0;
-      margin-right: 1.33%;
-      height: 180px;
-    }
-
-    .feature:first-child {
-      margin-left: 1%;
-    }
-
-    .feature:last-child {
-      margin-right: 0;
-    }
-  }
-
-  /* IE legacy fix */
-
-  .lt-ie9 .feature {
+@media all and (min-width:480px) {
+  .feature {
     display: inline;
-    width: 24%;
+    width: 48%;
     float: left;
+    margin: 1%;
+  }
+}
+
+@media all and (min-width:800px) {
+  .feature {
+    width: 24%;
+    margin: 0;
     margin-left: 0;
-    margin-right: 1%;
+    margin-right: 1.33%;
+    height: 180px;
   }
 
-  .lt-ie8 .feature {
-    width: 18.7%;
+  .feature:first-child {
+    margin-left: 1%;
   }
+
+  .feature:last-child {
+    margin-right: 0;
+  }
+}
+
+.lt-ie9 .feature {
+  display: inline;
+  width: 24%;
+  float: left;
+  margin-left: 0;
+  margin-right: 1%;
+}
+
+.lt-ie8 .feature {
+  width: 18.7%;
+}
 
 div.code {
-  border: 1px dashed #703e38;
+  border: #703e38 dashed 1px;
   background-color: #d3c8b4;
-
   overflow: auto;
   padding: 1em;
   margin: 1em 0;
 }
 
-  div.code::-webkit-scrollbar {
-    height: 10px;
-  }
+div.code::-webkit-scrollbar {
+  height: 10px;
+}
 
-  div.code pre, span.code {
-    font-family: "Consolas", monospace;
-    margin: 0;
-  }
+div.code pre, span.code {
+  font-family: "Consolas", monospace;
+  margin: 0;
+}
 
 .main-footer {
   background-color: #d3c8b4;
@@ -272,23 +238,17 @@ div.code {
   padding: 5%;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width:480px) {
   .main, .main-footer {
     padding: 2%;
   }
-}
 
-/*
- * Prettyprint
- */
-
-.pln {
-  color: #000;
-}
-
-@media all {
-  .str {
-    color: #0f8000;
+  .pln {
+    color: #000;
+  }
+@  media all {
+    .str {
+color: #0f8000;
   }
 
   .kwd {
