--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,7 @@
 @charset "utf-8";
 
-@import url('http://fonts.googleapis.com/css?family=Open+Sans');
-
 @font-face {
-  font-family : "'Open Sans'";
+  font-family : "Open Sans";
   font-style : normal;
   font-weight : 400;
   src : local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3aCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
