--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,5 @@
 @charset "utf-8";
 
-@font-face {
-  font-family : "Open Sans";
-  font-style : normal;
-  font-weight : 400;
-  src : local('Open Sans'), local('OpenSans'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3aCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
-}
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -15,7 +8,7 @@
 
 html, body {
   background-color: #e7e4d5;
-  font-family: "Helvetica Neue", "Open Sans", "Segoe UI", "Arial", sans-serif;
+  font-family: pt-sans, sans-serif;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -117,11 +110,14 @@ a {
   border: #703e38 solid 5px;
   background-color: #e7e4d5;
   color: #c84648;
-  border-radius: 100px;
-  width: 200px;
-  height: 200px;
-  font: 3em "Learning Curve Pro";
+  border-radius: 125px;
+  width: 250px;
+  height: 250px;
+  font-weight: normal;
+  font-family: pt-sans-narrow, sans-serif;
+  font-size: 3em;
   overflow-wrap: break-word;
+  line-height: 1;
   margin: 0.45em auto;
   padding: 0;
 }
